--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-url: https://y7kim.github.io
-baseurl: /agency-jekyll-theme/
+url: http://tverbesselt.github.io/consulting/
+baseurl: http://tverbesselt.github.io/consulting/
 
 # Site settings
-title: Awesome Title
-email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+title: Tom Verbesselt - .net consultant
+email: tom.verbesselt@gmail.com
+description: "tom verbesselt. it consulting"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
