--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-url: https://y7kim.github.io
-baseurl: /agency-jekyll-theme/
+url: http://tverbesselt.github.io/consulting/
+baseurl: http://tverbesselt.github.io/consulting/
 
 # Site settings
 title: Awesome Title
