--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@ url: http://tverbesselt.github.io/consulting/
 baseurl: http://tverbesselt.github.io/consulting/
 
 # Site settings
-title: Awesome Title
-email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+title: Tom Verbesselt
+email: tom.verbesselt@gmail.com
+description: ""
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
